listings/ch03-common-programming-concepts/output-only-01-no-type-annotations/output.txt
$ cargo build
   Compiling no_type_annotations v0.1.0 (file:///projects/no_type_annotations)
error[E0282]: type annotations needed
              (型注釈が必要です)
 --> src/main.rs:2:9
  |
2 |     let guess = "42".parse().expect("Not a number!");
  |         ^^^^^ consider giving `guess` a type
  |               (`guess`に型を与えることを検討してください)

For more information about this error, try `rustc --explain E0282`.
error: could not compile `no_type_annotations` due to previous error
